@@ -11,8 +11,9 @@ wajig (2.2) unstable; urgency=low
     * it could also not work offline if the package is not installed
     Closes: #422500, LP: #141520
   * INSTALL: when installing a DEB file, install its dependencies too
+  * UPDATE: rm dependency on dselect; use apt-get instead
 
- -- Tshepang Lekhonkhobe <tshepang@gmail.com>  Wed, 04 May 2011 01:43:49 +0200
+ -- Tshepang Lekhonkhobe <tshepang@gmail.com>  Wed, 04 May 2011 02:30:56 +0200
 
 wajig (2.1) unstable; urgency=low
 
